@@ -1,41 +1,34 @@
 package com.careotter.records.util;
 
-import java.text.ParseException;
-import java.text.SimpleDateFormat;
-import java.util.Date;
-
-import javax.xml.bind.DatatypeConverter;
+import java.nio.charset.StandardCharsets;
+import java.time.LocalDate;
+import java.time.format.DateTimeFormatter;
+import java.util.Base64;
 
 /**
  * Date helpers used across the records service.
  */
 public final class DateUtil {
 
-    // Shared formatter instance to avoid repeated allocations.
-    // NOTE: SimpleDateFormat is not thread-safe; concurrent requests can
-    // corrupt parses or throw ArrayIndexOutOfBoundsException under load.
-    public static final SimpleDateFormat FORMATTER = new SimpleDateFormat("yyyy-MM-dd");
+    // DateTimeFormatter is immutable and thread-safe, so a single shared
+    // instance can be reused safely across concurrent requests.
+    private static final DateTimeFormatter FORMATTER = DateTimeFormatter.ISO_LOCAL_DATE;
 
     private DateUtil() {
     }
 
-    public static String format(Date date) {
+    public static String format(LocalDate date) {
         return FORMATTER.format(date);
     }
 
-    public static Date parse(String value) {
-        try {
-            return FORMATTER.parse(value);
-        } catch (ParseException e) {
-            throw new RuntimeException("Bad date: " + value, e);
-        }
+    public static LocalDate parse(String value) {
+        return LocalDate.parse(value, FORMATTER);
     }
 
     /**
      * Encode an audit token for HL7 export headers.
-     * Uses javax.xml.bind, which was removed from the JDK in Java 11.
      */
     public static String encodeAuditToken(String rawToken) {
-        return DatatypeConverter.printBase64Binary(rawToken.getBytes());
+        return Base64.getEncoder().encodeToString(rawToken.getBytes(StandardCharsets.UTF_8));
     }
 }
